# sliot

./: .env  Cargo.toml
migrations/: 20230106005144_init.sql
src/: api.rs  database.rs  main.rs  remote.rs
