[package]
name = "sliot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-async-std-rustls", "bigdecimal", "json"] }
tide = "0.16.0"
anyhow = "1"
once_cell = "1.17.0"
argon2 = "0.4.1"
base64 = "0.20.0"
base58 = "0.2.0"
